--- a/src/css/_forms.css
+++ b/src/css/_forms.css
@@ -49,7 +49,7 @@ h3.form-title {
 
 .hs-form label {
   font-size: 1rem;
-  color: {{ form_label_color }};
+  color: #1e2b33;
   display: block;
   float: none;
   width: auto;
@@ -72,7 +72,7 @@ form select,
 form textarea {
   border: 1px solid #d0d0d0; 
   background-color: #fff; 
-  color: {{ form_input_color }};
+  color: #1e2b33;
   display: inline-block; 
   padding: 0.75rem; 
   width: 100%; 
@@ -155,11 +155,11 @@ form ul li::before {
 }
 
 .hs-input:-moz-placeholder {
-  color: {{ form_placeholder_color }};
+  color: #1e2b33;
 }
 
 .hs-input::-webkit-input-placeholder {
-  color: {{ form_placeholder_color }};
+  color: #1e2b33;
 }
 
 .hs-input input,
@@ -246,7 +246,7 @@ ul.no-list {
 }
 
 .hs-field-desc {
-  color: {{ form_description_color }};
+  color: #1e2b33;
   margin: 0px 0px 6px;
   font-size: 14px;
 }
