--- a/src/css/_header.css
+++ b/src/css/_header.css
@@ -1,5 +1,5 @@
 .header {
-  background-color: {{ get_theme_style_setting('colors.primary_color.color') }};
+  background-color: {{ get_theme_style_setting('header.header_bg_color.color') }};
 }
 
 .header-container {
@@ -9,7 +9,7 @@
 }
 
 .header-logo .logo-company-name {
-  color: #fff; 
+  color: {{ get_theme_style_setting('header.header_menu_link_color.color') }};
   font-size: 28px;
   margin-top: 7px;
 }
@@ -22,13 +22,27 @@
   display: none;
 }
 
+.navigation-primary a {
+  color: {{ get_theme_style_setting('header.header_menu_link_color.color') }};
+}
+
+.navigation-primary .submenu.level-1 > li > a.active-item:after {
+  background-color: {{ get_theme_style_setting('header.header_menu_link_color.color') }};
+}
+
+
 .submenu.level-2 {
-  background-color: {{ get_theme_style_setting('colors.primary_color.color') }};
+  background-color: {{ get_theme_style_setting('header.header_bg_color.color') }};
+  border-color: {{ get_theme_style_setting('header.header_menu_border_color.color') }};
+}
+
+.submenu.level-2 > li { 
+  border-bottom-color: {{ get_theme_style_setting('header.header_menu_border_color.color') }};
 }
 
 .submenu.level-2 .menu-item .menu-link:hover,
 .submenu.level-2 .menu-item .menu-link:focus {
-  background-color: {{ get_theme_style_setting('colors.secondary_color.color') }};
+  background-color: {{ get_theme_style_setting('header.header_menu_hover_color.color') }};
 }
 
 .cta {
@@ -63,7 +77,6 @@
     height: 40px;
     width: 40px;
     cursor: pointer;
-    filter: grayscale(1) brightness(4);
   }
 
   #nav-toggle:checked + .header-navigation-toggle {
@@ -72,7 +85,14 @@
     background-position: center;
     height: 22px;
     width: 20px;
-    filter: grayscale(1) brightness(4);
+  }
+
+  .submenu.level-1 > li {
+    border-top-color: {{ get_theme_style_setting('header.header_menu_border_color.color') }};
+  }
+
+  .submenu.level-2 .menu-item {
+    border-top-color: {{ get_theme_style_setting('header.header_menu_border_color.color') }};
   }
 
   .header .cta {
