--- a/src/modules/Menu section.module/module.css
+++ b/src/modules/Menu section.module/module.css
@@ -3,7 +3,6 @@
 }
 
 .navigation-primary a {
-  color: #fff;
   font-weight: 400;
   letter-spacing: 0.1em; 
 }
@@ -19,7 +18,6 @@
   left: 0;
   width: 100%;
   height: 2px;
-  background-color: #fff;
 }
 
 .navigation-primary .submenu {
@@ -58,7 +56,8 @@
 }
 
 .submenu.level-2 {
-  border: 1px solid #d0d0d0; 
+  border-width: 1px;
+  border-style: solid;
   border-radius: 4px; 
   left: 0; 
   opacity: 0; 
@@ -72,7 +71,8 @@
 
 .submenu.level-2 > li {
   padding: 0;
-  border-bottom: 1px solid #d0d0d0;
+  border-bottom-width: 1px;
+  border-bottom-style: solid;
 }
 
 .submenu.level-2 .menu-item .menu-link {
@@ -149,7 +149,8 @@
   .submenu.level-1 > li {
     display: block;
     width: 100%;
-    border-top: 1px solid #d0d0d0;
+    border-top-width: 1px;
+    border-top-style: solid;
     padding: 0;
   }
 
@@ -184,7 +185,6 @@
     margin-left: auto;
     margin-right: 30px;
     transition: transform 0.4s;
-    filter: grayscale(1) brightness(4);; 
   }
 
   input[type="checkbox"]:checked ~ .submenu {
@@ -208,7 +208,8 @@
 
   .submenu.level-2 .menu-item {
     padding: 0;
-    border-top: 1px solid #d0d0d0;
+    border-top-width: 1px; 
+    border-top-style: solid; 
     border-bottom: none;
   }
 
