--- a/src/modules/Testimonial.module/module.css
+++ b/src/modules/Testimonial.module/module.css
@@ -1,3 +1,10 @@
+.testimonial {
+    background-color: #fff; 
+    padding: 45px 40px 20px; 
+    text-align: center; 
+    margin-top: 20px; 
+}
+
 .testimonial .avatar, 
 .testimonial .name {
     display: inline-block;
