Added new logo images

--- a/src/templates/homepage.html
+++ b/src/templates/homepage.html
@@ -352,7 +352,7 @@
       {% module_attribute "label" %}Image{% end_module_attribute %}
       {% module_attribute "img" is_json=True %}
         {
-          "src": get_asset_url("../images/sample-logo.png"),
+          "src": get_asset_url("../images/hubspot-logo.png"),
           "width": "151",
           "alt": "Sample logo",
           "size_type": "auto"
@@ -368,7 +368,7 @@
       {% module_attribute "label" %}Image{% end_module_attribute %}
       {% module_attribute "img" is_json=True %}
         {
-          "src": get_asset_url("../images/sample-logo.png"),
+          "src": get_asset_url("../images/hubspot-logo.png"),
           "width": "151",
           "alt": "Sample logo",
           "size_type": "auto"
@@ -384,7 +384,7 @@
       {% module_attribute "label" %}Image{% end_module_attribute %}
       {% module_attribute "img" is_json=True %}
         {
-          "src": get_asset_url("../images/sample-logo.png"),
+          "src": get_asset_url("../images/hubspot-logo.png"),
           "width": "151",
           "alt": "Sample logo",
           "size_type": "auto"
@@ -400,7 +400,7 @@
       {% module_attribute "label" %}Image{% end_module_attribute %}
       {% module_attribute "img" is_json=True %}
         {
-          "src": get_asset_url("../images/sample-logo.png"),
+          "src": get_asset_url("../images/hubspot-logo.png"),
           "width": "151",
           "alt": "Sample logo",
           "size_type": "auto"
@@ -416,7 +416,7 @@
       {% module_attribute "label" %}Image{% end_module_attribute %}
       {% module_attribute "img" is_json=True %}
         {
-          "src": get_asset_url("../images/sample-logo.png"),
+          "src": get_asset_url("../images/hubspot-logo.png"),
           "width": "151",
           "alt": "Sample logo",
           "size_type": "auto"
@@ -432,7 +432,7 @@
       {% module_attribute "label" %}Image{% end_module_attribute %}
       {% module_attribute "img" is_json=True %}
         {
-          "src": get_asset_url("../images/sample-logo.png"),
+          "src": get_asset_url("../images/hubspot-logo.png"),
           "width": "151",
           "alt": "Sample logo",
           "size_type": "auto"
