--- a/src/css/_forms.css
+++ b/src/css/_forms.css
@@ -43,8 +43,7 @@ h3.form-title {
 .hs-button:hover, 
 .hs-button:focus,
 .hs-button:active {
-  background-color: {{ get_theme_style_setting('buttons.button_bg_hover_color.color') }};
-  border-color: {{ get_theme_style_setting('buttons.button_bg_hover_color.color') }};
+  border-color: {{ get_theme_style_setting('forms.form_field_focus_border_color.color') }};
   color: {{ get_theme_style_setting('buttons.button_text_color.color') }};
   text-decoration: none; 
 }
