--- a/src/css/_forms.css
+++ b/src/css/_forms.css
@@ -21,7 +21,8 @@ h3.form-title {
   text-transform: uppercase;  
 }
 
-.hs-button {
+.hs-button,
+.cta_button {
   background-color: {{ get_theme_style_setting('buttons.button_bg_color.color') }};
   border: 1px solid {{ get_theme_style_setting('buttons.button_bg_color.color') }};
   border-radius: {{ get_theme_style_setting('buttons.button_border_radius', 'px') }};
@@ -37,15 +38,21 @@ h3.form-title {
   text-decoration: none;
   text-transform: uppercase; 
   transition: all 0.15s linear;
-  width: 100%; 
 }
 
 .hs-button:hover, 
 .hs-button:focus,
-.hs-button:active {
+.hs-button:active,
+.cta_button:hover,
+.cta_button:focus,
+.cta_button:active {
   border-color: {{ get_theme_style_setting('forms.form_field_focus_border_color.color') }};
   color: {{ get_theme_style_setting('buttons.button_text_color.color') }};
   text-decoration: none; 
+}
+
+form .hs-button {
+  width: 100%; 
 }
 
 .hs-form label {
