--- a/src/css/main.css
+++ b/src/css/main.css
@@ -7,4 +7,5 @@
 {% include './_modules.css' %}
 {% include './_header.css' %}
 {% include './_footer.css' %}
+{% include './_blog.css' %}
 {% include './_system_pages.css' %}
