--- a/src/templates/blog-index.html
+++ b/src/templates/blog-index.html
@@ -12,7 +12,7 @@
       path="../modules/Blog Banner",
       label="Blog Listing Banner",
       background_image={
-        'src': get_asset_url('../images/blog-banner.png')
+        "src": get_asset_url("../images/blog-banner.png")
       }
     %}
 
