--- a/src/templates/event-listing.html
+++ b/src/templates/event-listing.html
@@ -6,7 +6,7 @@
 
 {% block body %}
 <main class="body-container-wrapper">
-  {% dnd_area "dnd_area" class='body-container body-container-event-listing', label='Main section' %}
+  {% dnd_area "dnd_area" class="body-container body-container-event-listing", label="Main section" %}
 
     {# Event Listing Section #}
     {% dnd_section %}
