--- a/src/templates/blog-post.html
+++ b/src/templates/blog-post.html
@@ -2,7 +2,7 @@
   templateType: blog
   isAvailableForNewContent: true
 -->
-{% extends './layouts/base.html' %}
+{% extends "./layouts/base.html" %}
 
 {% block body %}
 <main class="body-container-wrapper">
