--- a/src/templates/event-post.html
+++ b/src/templates/event-post.html
@@ -6,7 +6,7 @@
 
 {% block body %}
 <main class="body-container-wrapper">
-  {% dnd_area "dnd_area" class='body-container body-container-event-post', label='Main section' %}
+  {% dnd_area "dnd_area" class="body-container body-container-event-post", label="Main section" %}
 
     {# Event Post Section #}
     {% dnd_section %}
