--- a/src/templates/homepage.html
+++ b/src/templates/homepage.html
@@ -169,7 +169,7 @@
                 <div>
                   <h2 style="color: #fff;">Full Control</h2>
                   <p style="color: #fff;">Leverage the intuitive super awesome software that saves you time and will rescue your business. Promise.</p>
-                  <ul class="alternative-list" style="color: #fff;">
+                  <ul style="color: #fff;">
                     <li>Someting awesome here</li>
                     <li>Someting awesome here</li>
                     <li>Someting awesome here</li>
