Adding new modules to blog post and pricing page

--- a/src/templates/blog-index.html
+++ b/src/templates/blog-index.html
@@ -9,7 +9,7 @@
   <div class="body-container body-container-blog-index">
 
     {% module "blog_listing_banner"
-      path="../modules/Blog Banner",
+      path="../modules/Blog Listing Banner",
       label="Blog Listing Banner",
       background_image={
         "src": get_asset_url("../images/blog-banner.png")
